<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_history_item"
    android:stateListAnimator="@null"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"

    android:padding="8dp">

    <!-- Thumbnail -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageThumbnail"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
        android:contentDescription="@string/thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <ImageView
        android:id="@+id/iconSelected"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:src="@drawable/ic_check_list"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/imageThumbnail"
        app:layout_constraintEnd_toEndOf="@id/imageThumbnail"
        app:tint="?attr/colorOnSurface" />
    <!-- Info + tombol titik tiga -->
    <LinearLayout
        android:id="@+id/infoContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:weightSum="1"
        android:clickable="false"
        android:focusable="false"
        android:duplicateParentState="true"
        app:layout_constraintStart_toEndOf="@id/imageThumbnail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Area teks (klik dan tahan untuk aksi play & select) -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:clickable="false"
            android:focusable="false"
            android:duplicateParentState="true"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/textFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_file"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/textFileType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                android:textSize="14sp"
                android:textColor="?attr/colorOnSurface" />

            <TextView
                android:id="@+id/textFileSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 B"
                android:textColor="?attr/colorOnSurface"
                android:textSize="12sp"/>

        </LinearLayout>

        <!-- Tombol titik tiga -->
        <ImageButton
            android:id="@+id/btnMore"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_more_vert"
            android:contentDescription="@string/aksi"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="?attr/colorOnSurface" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
