<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:fitsSystemWindows="true">

    <!-- Konten -->
    <!-- Scrollable Content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/adContainer"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorOnSurface"
                android:hint="@string/tempel_link_instagram_disini"
                android:textColor="@color/colorOnSurface"
                android:textColorHint="@color/colorHint"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@android:color/holo_red_dark">

                <TextView
                    android:id="@+id/textCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="2dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/count_text"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="textUri"
                    android:padding="15dp"
                    android:textSize="14sp"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeErrorColor="@color/colorOutline" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="18dp"
                app:cardElevation="6dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <!-- Progress Bar sebagai Background -->
                    <ProgressBar
                        android:id="@+id/progressDownload"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:indeterminate="false"
                        android:max="100"
                        android:progressDrawable="@drawable/progress_full"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/btnDownload"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@android:color/holo_red_dark"
                        android:backgroundTint="@android:color/holo_red_dark"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="16dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"

                            android:text="@string/download"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />
                        <!-- Persentase (%) -->
                        <TextView
                            android:id="@+id/textProgress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/persen"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:visibility="gone" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/arrowIcon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:contentDescription="@string/dropdown_arrow"
                            android:src="@drawable/ic_arrow_down" />
                    </LinearLayout>
                </FrameLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Container untuk Switch dan Iklan -->
    <LinearLayout
        android:id="@+id/adContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-2025447201837747/8904457185"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
